# sieve-lcm

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: assembler.rs  cli.rs  compaction.rs  complete_options.rs  engine.rs  expansion.rs  expansion_auth.rs  expansion_policy.rs  integrity.rs  large_files.rs  lib.rs  planner_context.rs  retrieval.rs  summarize.rs  transcript_repair.rs  types.rs
src/db/: config.rs  connection.rs  migration.rs  mod.rs
src/store/: conversation_store.rs  fts5_sanitize.rs  mod.rs  summary_store.rs
src/tools/: common.rs  lcm_conversation_scope.rs  lcm_describe_tool.rs  lcm_expand_query_tool.rs  lcm_expand_tool.rs  lcm_expand_tool_delegation.rs  lcm_expansion_recursion_guard.rs  lcm_grep_tool.rs  mod.rs
tests/: cli.rs  engine.rs  expansion.rs  expansion_auth.rs  expansion_policy.rs  fts5_sanitize.rs  index_complete_options.rs  large_files.rs  lcm_expand_query_tool.rs  lcm_expand_tool.rs  lcm_expand_tool_delegation.rs  lcm_integration.rs  lcm_tools.rs  migration.rs  planner_context.rs  summarize.rs
